--- a/css/main.css
+++ b/css/main.css
@@ -1,49 +1,99 @@
-/*body {
+body {
 	background: url('../img/wood.jpg');
 	background-size: cover;
     background-position: center;
     margin: 0 auto;
-}*/
+}
 
-/*.container {
-	width: 556px;
+.container {
+	width: 875px;
 	height: 575px;
 	margin: 0 auto;
 	margin-top: 150px;
-/*	background-color: red;*/
+/*	background: red;*/
+}
 
-
-
-#output, #output2 {
-	background: grey;
-	width: 102px;
-	height: 25px;
-	text-align: center;
+#timerContainer1 {
+	width: 125px;
+	height: 63px;
+	margin-right: 25px;
+	margin-top: 52.5px;
+	background: url('../img/brownWoodLeft.jpg');
 	border-radius: 5px;
-	vertical-align: center;
-	display: inline-block;
-	margin: 4px ;
+	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.625);
 }
 
-/*div .square {
-	
-		display: inline-block;	
-		
+#timer1 {
+	position: absolute;
+	margin-top: -61px;
+	margin-left: 150px;
 }
 
-img {
-	display: inline-block;	
-	display: inline-block;
+#playerOneText  {
+	margin-left: -122.5px;
+}
+
+#output1 {
+	position: relative;
+	margin-top: 37.5px;
+	margin-left: -115px;
+	color: black;
+	font-family: 'Sancreek', cursive;
+	letter-spacing: 1px;
+}
+
+#timerContainer2 {
+	width: 125px;
+	height: 63px;
+	margin-left: 25px;
+	margin-top: 52.5px;
+	background: url('../img/brownWoodRight.jpg');
+	border-radius: 5px;
+	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.625);
+}
+
+#timer2 {
+	position: absolute;
+	margin-top: -61px;
+	margin-left: 142.5px;	
+}
+
+#playerTwoText  {
+	margin-left: -122.5px;
+}
+
+#output2 {
+	position: relative;
+	margin-top: 37.5px;
+	margin-left: -115px;
+	color: black;
+	font-family: 'Sancreek', cursive;
+	letter-spacing: 1px;
+}
+
+img {	
+	margin-left: 50px;
 	width: 100px;
 	height: 125px;
-	background: url('../img/wanted.jpg');
 	border-radius: 7.5px;
 	margin: 4px;
 	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.625);
 }
 
 
-p {
-	vertical-align: center;
+
+/*#playerTwoText  {
+	width: 100px;
+	height: 100px;
 }*/
+
+h1 {
+	margin-top: 15px;
+	font-family: 'Sancreek', cursive;
+	color: rgba(255, 255, 255, .90);
+	font-size: 22px;
+	text-shadow: 2px 2px rgba(0, 0, 0, 0.75);
+}
+
+
 
