--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,20 @@ body {
     margin: 0 auto;
 }
 
+.containerIntro {
+	width: 800px;
+	height: 575px;
+	margin: 0 auto;
+	margin-top: 150px;
+	background: url('../img/greatTrainRobbery.png');
+}
+
 .container {
 	width: 875px;
 	height: 575px;
 	margin: 0 auto;
 	margin-top: 150px;
+	display: none;
 /*	background: red;*/
 }
 
@@ -30,7 +39,8 @@ body {
 }
 
 #playerOneText  {
-	margin-left: -122.5px;
+	margin-left: -127.5px;
+	letter-spacing: 1px;
 }
 
 #output1 {
@@ -59,7 +69,8 @@ body {
 }
 
 #playerTwoText  {
-	margin-left: -122.5px;
+	margin-left: -125px;
+	letter-spacing: 1px;
 }
 
 #output2 {
@@ -82,11 +93,6 @@ img {
 
 
 
-/*#playerTwoText  {
-	width: 100px;
-	height: 100px;
-}*/
-
 h1 {
 	margin-top: 15px;
 	font-family: 'Sancreek', cursive;
@@ -94,6 +100,8 @@ h1 {
 	font-size: 22px;
 	text-shadow: 2px 2px rgba(0, 0, 0, 0.75);
 }
+
+
 
 
 
