--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body {
 	background-size: cover;
     background-position: center;
     margin: 0 auto;
+/*    display: none;*/
 }
 
 .containerIntro {
@@ -29,7 +30,7 @@ h3 {
 	position: absolute;
 	margin-top: 200px;
 	margin-left: 150px;
-	color: rgba(0, 0, 0, .75);
+	color: rgba(0, 0, 0, .70);
 }
 
 .containerPeople {
@@ -37,102 +38,59 @@ h3 {
 	height: 575px;
 	margin: 0 auto;
 	margin-top: 150px;
-/*	background: url('../img/wantedBig.png');*/
 	display: none;
 }
 
 #buffaloBill {
 	background: url('../img/buffaloBillA.jpg');
-	margin-left: 32.5px;
-	margin-top: 50px;
-	width: 100px;
-	height: 125px;
-	border-radius: 7.5px;
-	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.625);
 }
 
 #billyTheKid {
 	background: url('../img/billyTheKidA.jpg');
-	margin-left: 32.5px;
-	margin-top: 50px;
-	width: 100px;
-	height: 125px;
-	border-radius: 7.5px;
-	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.625);
 }
 
 #josephine {
 	background: url('../img/josephineA.jpg');
-	margin-left: 32.5px;
-	margin-top: 50px;
-	width: 100px;
-	height: 125px;
-	border-radius: 7.5px;
-	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.625);
 }
 
 #docHolliday {
 	background: url('../img/docHollidayA.jpg');
-	margin-left: 32.5px;
-	margin-top: 50px;
-	width: 100px;
-	height: 125px;
-	border-radius: 7.5px;
-	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.625);
 }
 
 #wyattEarp {
 	background: url('../img/wyattEarpA.jpg');
-	margin-left: 32.5px;
-	margin-top: 50px;
-	width: 100px;
-	height: 125px;
-	border-radius: 7.5px;
-	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.625);
 }
 
 #madameMustache {
 	background: url('../img/madameMustacheA.jpg');
-	margin-left: 32.5px;
-	margin-top: 50px;
-	width: 100px;
-	height: 125px;
-	border-radius: 7.5px;
-	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.625);
 }
 
 #butchCassidy {
 	background: url('../img/butchCassidyA.jpg');
-	margin-left: 32.5px;
-	margin-top: 50px;
-	width: 100px;
-	height: 125px;
-	border-radius: 7.5px;
-	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.625);
 }
 
 #bonnieAndClyde {
 	background: url('../img/bonnieAndClydeA.jpg');
-	margin-left: 32.5px;
-	margin-top: 50px;
-	width: 100px;
-	height: 125px;
-	border-radius: 7.5px;
-	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.625);
 }
 
 #batMasterson {
 	background: url('../img/batMastersonA.jpg');
-	margin-left: 32.5px;
-	margin-top: 50px;
-	width: 100px;
-	height: 125px;
-	border-radius: 7.5px;
-	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.625);
 }
 
 #jesseJames {
 	background: url('../img/jesseJamesA.jpg');
+}
+
+#buffaloBill,
+#billyTheKid,
+#josephine,
+#docHolliday,
+#wyattEarp,
+#madameMustache,
+#butchCassidy,
+#bonnieAndClyde,
+#batMasterson,
+#jesseJames {
 	margin-left: 32.5px;
 	margin-top: 50px;
 	width: 100px;
@@ -159,7 +117,6 @@ h4 {
 	margin: 0 auto;
 	margin-top: 150px;
 	display: none;
-/*	background: red;*/
 }
 
 #timerContainer1 {
@@ -231,14 +188,44 @@ img {
 	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.625);
 }
 
-
-
 h1 {
 	margin-top: 15px;
 	font-family: 'Sancreek', cursive;
 	color: rgba(255, 255, 255, .90);
 	font-size: 22px;
 	text-shadow: 2px 2px rgba(0, 0, 0, 0.75);
+}
+
+.containerOneWins{
+	width: 800px;
+	height: 575px;
+	margin: 0 auto;
+	margin-top: 165px;
+/*	background-color: red;*/
+	display: none;
+}
+
+.oneWinsPartOne {
+	width: 300px;
+	height: 375px;
+	background: url('../img/tombstone.jpg');
+	margin: 0 auto;
+/*	margin-top: 112.5px;*/
+	border-radius: 5px;
+	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.625);
+}
+
+h2 {
+	color: white;
+	font-size: 15px;
+	width: 300px;
+	height: 35px;
+	background-color: grey;
+	border-radius: 5px;
+	margin: 0 auto;
+	margin-top: 40px;
+	text-align: center;
+	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.625);
 }
 
 
