--- a/css/main.css
+++ b/css/main.css
@@ -45,43 +45,43 @@ h3 {
 }
 
 #buffaloBill {
-	background: url('../img/buffaloBillA.jpg');
+	background: url('../img/buffaloBill.jpg');
 }
 
 #billyTheKid {
-	background: url('../img/billyTheKidA.jpg');
+	background: url('../img/billyTheKid.jpg');
 }
 
 #josephine {
-	background: url('../img/josephineA.jpg');
+	background: url('../img/josephine.jpg');
 }
 
 #docHolliday {
-	background: url('../img/docHollidayA.jpg');
+	background: url('../img/docHolliday.jpg');
 }
 
 #wyattEarp {
-	background: url('../img/wyattEarpA.jpg');
+	background: url('../img/wyattEarp.jpg');
 }
 
 #madameMustache {
-	background: url('../img/madameMustacheA.jpg');
+	background: url('../img/madameMustache.jpg');
 }
 
 #butchCassidy {
-	background: url('../img/butchCassidyA.jpg');
+	background: url('../img/butchCassidy.jpg');
 }
 
 #bonnieAndClyde {
-	background: url('../img/bonnieAndClydeA.jpg');
+	background: url('../img/bonnieAndClyde.jpg');
 }
 
 #batMasterson {
-	background: url('../img/batMastersonA.jpg');
+	background: url('../img/batMasterson.jpg');
 }
 
 #jesseJames {
-	background: url('../img/jesseJamesA.jpg');
+	background: url('../img/jesseJames.jpg');
 }
 
 #buffaloBill,
@@ -104,7 +104,8 @@ h3 {
 
 h4 {
 	color: white;
-	width: 135px;
+	width: 140px;
+	letter-spacing: .5px;
 	height: 17.5px;
 	background-color: grey;
 	text-align: center;
@@ -119,7 +120,6 @@ h4 {
 	height: 450px;
 	margin: 0 auto;
 	margin-top: 215px;
-	cursor: pointer;
 	display: none;
 /*	background-color: red;*/
 }
@@ -143,9 +143,10 @@ h5 {
 	margin: 0 auto;
 	font-family: 'Kadwa', serif;
 	margin-top: 50px;
-	letter-spacing: 1px;
+	letter-spacing: 2px;
 	text-align: center;
 	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.625);
+	text-shadow: 2px 2px 2px black;
 }
 
 .container {
@@ -315,6 +316,7 @@ h2 {
 	letter-spacing: 1px;
 	text-align: center;
 	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.625);
+	text-shadow: 1.5px 1.5px 1.5px rgba(0, 0, 0, .5);
 }
 
 
