--- a/css/main.css
+++ b/css/main.css
@@ -318,6 +318,11 @@ h2 {
 	text-shadow: 1.5px 1.5px 1.5px rgba(0, 0, 0, .5);
 }
 
+.play-again {
+	color: white;
+	background-color: red;
+}
+
 
 
 
