rendered replay button

--- a/css/main.css
+++ b/css/main.css
@@ -321,6 +321,12 @@ h2 {
 .play-again {
 	color: white;
 	background-color: red;
+	list-style: none;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	border-radius: 5px;
+	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.625);
+	margin: 0 auto;
 }
 
 
