--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,15 @@ body {
 	background: url('../img/greatTrainRobbery.png');
 }
 
+.wanted-headline {
+	margin-top: 15px;
+	font-family: 'Sancreek', cursive;
+	color: rgba(255, 255, 255, .90);
+	font-size: 50px;
+	text-shadow: 2px 2px rgba(0, 0, 0, 0.75);
+	margin-left: 100px;
+}
+
 .containerInstruc {
 	width: 800px;
 	height: 575px;
