--- a/css/main.css
+++ b/css/main.css
@@ -257,9 +257,9 @@ h1 {
 
 .containerOneWinsPartTwo {
 	width: 800px;
-	height: 575px;
+	height: 625px;
 	margin: 0 auto;
-	margin-top: 125px;
+	margin-top: 100px;
 	display: none;
 }
 
@@ -291,9 +291,9 @@ h1 {
 
 .containerTwoWinsPartTwo {
 	width: 800px;
-	height: 575px;
+	height: 625px;
 	margin: 0 auto;
-	margin-top: 125px;
+	margin-top: 100px;
 	display: none;
 }
 
@@ -323,14 +323,19 @@ h2 {
 }
 
 .play-again {
+	margin-top: 32.5px;
+	margin-left: 350px;
 	color: white;
-	background-color: red;
-	list-style: none;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	font-size: 15px;
+	background-color: #ba332e;
+	padding-top: 5px;
+	padding-bottom: 5px;
 	border-radius: 5px;
 	box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.625);
-	margin: 0 auto;
+	cursor: pointer;
+	width: 100px;
+	text-align: center;
+	text-shadow: 1.5px 1.5px 1.5px rgba(0, 0, 0, .5);
 }
 
 
