changed font size

--- a/css/main.css
+++ b/css/main.css
@@ -326,7 +326,8 @@ h2 {
 	margin-top: 32.5px;
 	margin-left: 350px;
 	color: white;
-	font-size: 15px;
+	font-size: 16.5px;
+	letter-spacing: 1px;
 	background-color: #ba332e;
 	padding-top: 5px;
 	padding-bottom: 5px;
