--- a/css/main.css
+++ b/css/main.css
@@ -326,8 +326,8 @@ h2 {
 	margin-top: 32.5px;
 	margin-left: 350px;
 	color: white;
-	font-size: 17.5px;
-	letter-spacing: 1px;
+	font-size: 17px;
+	letter-spacing: .5px;
 	background-color: #ba332e;
 	padding-top: 5px;
 	padding-bottom: 5px;
